<resources>
    <string name="app_name">ОСМ</string>
    <string name="main_title">Ортостатический мониторинг</string>
    <string name="new_button">Новая запись</string>
    <string name="stat_button">Просмотр записей</string>
    <string name="delete_z">Удалить запись</string>
    <string name="save_z">Сохранить запись</string>
    <string name="info_button">Инструкция</string>
    <string name="date_picker_title">Дата измерения</string>
    <string name="new_note">Новая запись</string>
    <string name="show_subtitle">Показать количество записей</string>
    <string name="hide_subtitle">Скрыть</string>
    <string name="subtitle_format">%1$s записей</string>
    <string name="delete_note">Удалить запись</string>
    <string name="delete_picker_title">Удалить запись?</string>
    <string name="zone_1t">I зона («востановительная»)</string>
    <string name="zone_1">Нет признаков напряжения в работе функциональных систем</string>
    <string name="zone_2t">II зона («недовосстановления» - до начала занятия, «зона малой нагрузки» - на момент завершения занятия)</string>
    <string name="zone_2">Некоторые признаки напряжения</string>
    <string name="zone_3t">III зона («адаптации» - до начала занятия, «тренировочная» - на момент завершения занятия)</string>
    <string name="zone_3">Ярко выраженное напряжение</string>
    <string name="zone_4t"> IV зона («стресса»)</string>
    <string name="zone_4">Сильное напряжение, постоянное пребывание в данной зоне более 3-4 дней не рекомендуется</string>

    <string name="OST">Для определения динамики внутренней величины нагрузки можно использовать метод оценки
        функционального состояния организма по данным модифицированной ортостатической пробы, который успешно
        применялся ранее в сборных командах страны по ряду видов спорта (табл. 1). Первое измерение ЧСС1 (уд/мин)
        подсчитывается после 3-5 минут относительного покоя сидя за 15 с, испытуемый поднимается в положение стоя
        и с задержкой 3-5 секунд проводится повторная регистрация ЧСС2 (уд/мин); баллы, оценивающие функциональное
        состояние организма определяются по разнице между ЧСС1 и ЧСС2 с помощью оценочной таблицы (тестирование
        проводится до и после занятия). В результате измерений устанавливаются зоны функционального состояния:
        14,5-7,5 баллов – I зона («востановительная») – нет признаков напряжения в работе функциональных систем;
        7-5 баллов – II зона («недовосстановления» - до начала занятия, «зона малой нагрузки» - на момент завершения занятия)
        – некоторые признаки напряжения; 4,5-2,5 балла  – III зона  («адаптации» - до начала занятия, «тренировочная»
        - на момент завершения занятия) – ярко выраженное напряжение; менее 2 баллов  – IV зона («стресса»)
        – сильное напряжение, постоянное пребывание в данной зоне более 3-4 дней не рекомендуется.  Таким образом,
        с помощью проведения данной пробы возможно выявлять динамику процесса адаптации функционального состояния
        организма занимающихся к предлагаемым нагрузкам</string>
    <string name="WhatText">Ортостатический мониторинг - это метод оценки
        функционального состояния организма по данным модифицированной ортостатической пробы, который успешно
        применялся ранее в сборных командах страны по ряду видов спорта</string>
    <string name="WhatWorkText">Мониторинг проводится путем двух измерений частоты сердечных сокращений (ЧСС). 
        Первое измерение ЧСС1 (уд/мин) подсчитывается после 3-5 минут относительного покоя сидя за 15 секунд, 
        затем испытуемый поднимается в положение стоя и с задержкой 3-5 секунд проводится повторная регистрация ЧСС2 (уд/мин)</string>
    <string name="WhatWorkText2">Баллы, оценивающие функциональное состояние организма определяются по разнице
        между ЧСС1 и ЧСС2 с помощью оценочной таблицы (тестирование проводится до и после занятия).
        В результате измерений устанавливаются зоны функционального состояния: \n14,5-7,5 баллов – I зона («востановительная») –
        нет признаков напряжения в работе функциональных систем; \n7-5 баллов – II зона («недовосстановления» -
        до начала занятия, «зона малой нагрузки» - на момент завершения занятия) – некоторые признаки напряжения;
        \n4,5-2,5 балла  – III зона  («адаптации» - до начала занятия, «тренировочная» - на момент завершения занятия)
        – ярко выраженное напряжение; \nменее 2 баллов  – IV зона («стресса») – сильное напряжение, постоянное пребывание
        в данной зоне более 3-4 дней не рекомендуется.</string>
    <string name="WhatUsing">Для ввода данных измерения, подсчета количества баллов и определения зоны в Главном меню нужно выбрать пункт - Новая запись.
        В расширенной версии приложения есть функция считывания пульса с помощью камеры и вспышки смартфона.</string>
    <string name="pr_text">Ортостатическое тестирование (пробу) можно использовать для оценки адаптационных возможностей организма,
        определения функциональных резервов механизмов регуляции. \nПрактическое применение методики модифицированной ортостатической пробы может помочь начинающим тренерам в определении
        адаптационных реакций организма спортсмена на тренировочные нагрузки на этапе спортивного совершенствования.</string>
    <string name="wait">В следующей версии ожидаются: улучшенный интерфейс, работа дизайнера</string>
    <string name="WhatUsing2">Все записи, сделанные вами вы можете посмотреть, выбрав в Главном меню пункт - Просмотр записей. Для удобства поиска нужной записи воспользуйтесь сортировкой по дате.\nВыбрав в меню пункт - Статистика, вы сможете посмотреть динамику зоны или балла за все время и статистику нахождения в зонах.\nФункция SmartScrore - обучающаяся нейронная сеть, которая позволяет более качественно давать оценку состояния.
    </string>
    <string name="banner_ad_unit_id">ca-app-pub-3781095842244998/4103854063</string>
    <string name="banner_ad_unit_idtwo">ca-app-pub-3781095842244998/9275756860</string>
    <string name="banner_ad_unit_idthree">ca-app-pub-3781095842244998/6322290464</string>
    <string name="banner_ad_unit_idfour">ca-app-pub-3781095842244998/7799023667</string>
    <string name="default_text">--</string>
    <string name="note_report">
Ортостатическая проба\nДата - %1$s\nМомент - %2$s\nНижний пульс - %3$s\nВерхний пульс - %4$s\nБалл - %5$s\nЗона - %6$s\nЗаметки - %7$s
</string>
    <string name="banner_ad_unit_idfive">ca-app-pub-3781095842244998/5768730464</string>
    <string-array name="graph">
        <item>Динамика зоны</item>
        <item>Динамика балла</item>
        <!--<item>Динамика зоны(после тренировки)</item>-->
        <!--<item>Динамика балла(посл тренировки)</item>-->
    </string-array>
    <string name="textforon">Функция SmartScore позволяет делать оценку состояния более качественно</string>
    <string name="textbuttonforon">Включить</string>
    <string name="textforoff">Функция SmartScore позволяет делать оценку состояния более качественно.\nЕсли вы отключите функцию, то весь прогресс совершенствования системы будет утерян!</string>
    <string name="textbuttonforoff">Отключить</string>

</resources>
