<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:paddingBottom="12dp">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/scroller"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:fillViewport="true"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:paddingLeft="10dp"
                      android:paddingRight="10dp"
                      android:paddingStart="10dp"

                      android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView9"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Что такое Ортостатический мониторинг?"
                android:textSize="20dp"/>

            <TextView
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WhatText"

                android:textSize="17dp"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Предназначение?"
                android:textSize="20dp"/>

            <TextView
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pr_text"
                android:textSize="17dp"/>

            <TextView
                android:id="@+id/textView10"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Как это работает?"
                android:textSize="20dp"/>

            <TextView
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WhatWorkText"
                android:textSize="17dp"/>

            <TextView
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WhatWorkText2"
                android:textSize="17dp"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Как пользоваться?"
                android:textSize="20dp"/>

            <TextView
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WhatUsing"
                android:textSize="17dp"/>

            <TextView
                android:id="@+id/textView6"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WhatUsing2"
                android:textSize="17dp"/>
        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewfour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_idfour">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>

